created 128 network will try to train it

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -9,7 +9,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n"
+      "Using TensorFlow backend.\n",
+      "/anaconda3/envs/dml/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
+      "  return f(*args, **kwds)\n"
      ]
     }
    ],
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,14 +169,21 @@
     "    image = LeakyReLU(alpha=0.2)(image)\n",
     "    \n",
     "    image = UpSampling2D()(image) # 32\n",
-    "    image = Conv2D(64, kernel_size=3, padding=\"same\")(image)\n",
+    "    image = Conv2D(128, kernel_size=3, padding=\"same\")(image)\n",
     "    image = BatchNormalization()(image)\n",
     "    image = LeakyReLU(alpha=0.2)(image)\n",
     "    \n",
     "    image = UpSampling2D()(image) # 64\n",
-    "    image = Conv2D(32, kernel_size=3, padding=\"same\")(image)\n",
+    "    image = Conv2D(128, kernel_size=3, padding=\"same\")(image)\n",
     "    image = BatchNormalization()(image)\n",
     "    image = LeakyReLU(alpha=0.2)(image)\n",
+    "    \n",
+    "    # new block\n",
+    "    image = UpSampling2D()(image) # 128\n",
+    "    image = Conv2D(64, kernel_size=3, padding=\"same\")(image)\n",
+    "    image = BatchNormalization()(image)\n",
+    "    image = LeakyReLU(alpha=0.2)(image)\n",
+    "    # ---- \n",
     "    \n",
     "    #image = UpSampling2D()(image) # 128\n",
     "    image = Conv2D(3, kernel_size=3, padding=\"same\", activation='sigmoid')(image)\n",
@@ -183,13 +192,18 @@
     "\n",
     "def build_discriminator():\n",
     "    \n",
-    "    image_input = Input(shape=(64,64,3))\n",
+    "    image_input = Input(shape=(128,128,3))\n",
     "    \n",
-    "    image = Conv2D(32, kernel_size=5, padding=\"same\", strides=2)(image_input) # 32\n",
+    "    image = Conv2D(32, kernel_size=5, padding=\"same\", strides=2)(image_input) # 64\n",
     "    image = LeakyReLU(alpha=0.2)(image)\n",
     "    \n",
     "    image = Dropout(0.25)(image)\n",
-    "    image = Conv2D(64, kernel_size=5, padding=\"same\", strides=2)(image) # 16\n",
+    "    image = Conv2D(64, kernel_size=5, padding=\"same\", strides=2)(image) # 32\n",
+    "    image = BatchNormalization()(image)\n",
+    "    image = LeakyReLU(alpha=0.2)(image)\n",
+    "    \n",
+    "    image = Dropout(0.25)(image)\n",
+    "    image = Conv2D(128, kernel_size=5, padding=\"same\", strides=2)(image) # 16\n",
     "    image = BatchNormalization()(image)\n",
     "    image = LeakyReLU(alpha=0.2)(image)\n",
     "    \n",
@@ -199,7 +213,7 @@
     "    image = LeakyReLU(alpha=0.2)(image)\n",
     "    \n",
     "    image = Dropout(0.25)(image)\n",
-    "    image = Conv2D(256, kernel_size=5, padding=\"same\", strides=1)(image) # 8\n",
+    "    image = Conv2D(128, kernel_size=5, padding=\"same\", strides=1)(image) # 8\n",
     "    image = BatchNormalization()(image)\n",
     "    image = LeakyReLU(alpha=0.2)(image)\n",
     "    \n",
@@ -218,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,8 +333,8 @@
     "        if epoch % save_interval == 0:\n",
     "            save_imgs(epoch, generator)\n",
     "        if epoch % 10 == 0:\n",
-    "            generator.save('generator_fine_tune_2_epoch_%d.h5' % epoch)\n",
-    "            discriminator.save('discriminator_fine_tune_2_epoch_%d.h5' % epoch)\n",
+    "            generator.save('generator_128_epoch_%d.h5' % epoch)\n",
+    "            discriminator.save('discriminator_128_epoch_%d.h5' % epoch)\n",
     "    \n",
     "    return d_loss_hist, g_loss_hist"
    ]
@@ -334,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +458,7 @@
     }
    ],
    "source": [
-    "data_generator, train_generator = get_data_generators(64)"
+    "data_generator, train_generator = get_data_generators(128)"
    ]
   },
   {
